--- a/housing-back/Housing/Housing.Data/Housing.Data/Housing.Data.csproj
+++ b/housing-back/Housing/Housing.Data/Housing.Data/Housing.Data.csproj
@@ -7,12 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Scripts\Bills.GetTotal.sql">
+      <LastGenOutput>Summary.Designer.cs</LastGenOutput>
+      <Generator>SettingsSingleFileGenerator</Generator>
+    </None>
+    <None Update="Scripts\Bills.GetSummary.sql">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Summary.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
